--- a/Android/ManyFest/res/values/strings.xml
+++ b/Android/ManyFest/res/values/strings.xml
@@ -2,11 +2,7 @@
 <resources>
 
     <string name="app_name">ManyFest</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-    <string name="action_settings">Settings</string>
-
+    
     <string name="f_yes">Sim</string>
     <string name="f_no">Não</string>
     <string name="f_loading">Carregando...</string>
@@ -19,5 +15,8 @@
     
     <string name="f_to_update">Atualizar</string>
     <string name="f_no_gms">O aplicativo de mapas está desatualizado</string>
-    
+
+    <string name="f_map">Mapa</string>
+    <string name="f_events">Eventos</string>
+
 </resources>
