--- a/Android/ManyFest/res/values/strings.xml
+++ b/Android/ManyFest/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">ManyFest</string>
+    <string name="title_color">#808080</string>
     
     <string name="f_yes">Sim</string>
     <string name="f_no">Não</string>
