--- a/Android/Legion/res/values/strings.xml
+++ b/Android/Legion/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="f_yes">Sim</string>
     <string name="f_no">Não</string>
     <string name="f_ok">Ok</string>
+    <string name="f_sending">Enviando...</string>
     <string name="f_loading">Carregando...</string>
     
     <string name="f_no_connection">Sem conexão</string>
@@ -17,9 +18,29 @@
     
     <string name="f_to_update">Atualizar</string>
     <string name="f_no_gms">O aplicativo de mapas está desatualizado</string>
+    <string name="f_click_to_update">Não foi possível atualizar informações, clique aqui para tentar novamente.</string>
 
+    <string name="f_to_send">Enviar</string>
+    
     <string name="f_like">Gostei</string>
     <string name="f_unlike">Não gostei</string>
+    
+    <string name="l_event">evento</string>
+    <string name="l_events">eventos</string>
+    <string name="l_subject">assunto</string>
+    <string name="l_subjects">assuntos</string>
+    <string name="l_comment">comentário</string>
+    <string name="l_comments">comentários</string>
+    <string name="l_answer">resposta</string>
+    <string name="l_answers">respostas</string>
+    <string name="f_event">Evento</string>
+    <string name="f_events">Eventos</string>
+    <string name="f_subject">Assunto</string>
+    <string name="f_subjects">Assuntos</string>
+    <string name="f_comment">Comentário</string>
+    <string name="f_comments">Comentários</string>
+    <string name="f_answer">Resposta</string>
+    <string name="f_answers">Respostas</string>
     
     <!-- Main -->
     <string name="f_main_map">Mapa</string>
@@ -42,7 +63,7 @@
     <string name="f_newuser_register">Registrar</string>
     
     <string name="f_newuser_fill_login_title">Nome do usuário</string>
-    <string name="f_newuser_fill_login_subtitle">O nome de usuário precisa ter entre 4 e 32 caracteres e ser composto apenas por números.</string>
+    <string name="f_newuser_fill_login_subtitle">O nome de usuário precisa ter entre 4 e 32 caracteres e ser composto apenas por letras, números, "." ou "-".</string>
     <string name="f_newuser_fill_login_exists">Já sendo existe.\n\nO nome precisa ser único.</string>
     <string name="f_newuser_fill_pass_title">Senha do usuário</string>
     <string name="f_newuser_fill_pass_subtitle">A senha de usuário precisa ter entre 4 e 32 caracteres.</string>
@@ -77,5 +98,43 @@
     <string name="f_newevent_fill_name_subtitle">O nome do local precisa ter entre 2 e 32 caracteres.</string>
     <string name="f_newevent_fill_description_title">Descrição do local</string>
     <string name="f_newevent_fill_description_subtitle">A descrição do local precisa ter ao menos 4 caracteres.</string>
+    
+	<!-- Event -->
+    <string name="f_event_fill_name_title">Assunto</string>
+    <string name="f_event_fill_name_subtitle">O assunto precisa ter ao menos 4 caracteres.</string>
+    
+    <string name="f_event_fill_cant_send">O assunto não pôde ser enviado.</string>
+    
+    <!-- Subject -->
+    <string name="f_subject_fill_name_title">Comenário</string>
+    <string name="f_subject_fill_name_subtitle">O comentário precisa ter ao menos 4 caracteres.</string>
+    
+    <string name="f_subject_fill_cant_send">O comentário não pôde ser enviado.</string>
+
+    <!-- Comment -->
+    <string name="f_comment_fill_name_title">Resposta</string>
+    <string name="f_comment_fill_name_subtitle">A resposta precisa ter ao menos 4 caracteres.</string>
+    
+    <string name="f_comment_fill_cant_send">A resposta não pôde ser enviada.</string>
+
+    <!-- Comment -->
+    <string name="f_profile_title">Perfil</string>
+    <string name="f_profile_save">Salvar</string>
+    
+	<string name="f_profile_fill_name_title">Nome do usuário</string>
+    <string name="f_profile_fill_name_subtitle">O nome de usuário precisa ter entre 4 e 32 caracteres.</string>
+    <string name="f_profile_fail">Não foi possível salvar.</string>
+
+    <!-- Notification -->
+    <string name="l_notification_person">pessoa</string>
+    <string name="l_notification_people">pessoas</string>
+    <string name="l_notification_liked">gostou</string>
+    <string name="l_notification_disliked">não gostou</string>
+    <string name="l_notification_likeds">gostaram</string>
+    <string name="l_notification_dislikeds">não gostaram</string>
+    <string name="l_notification_of_your_event">do seu evento</string>
+    <string name="l_notification_of_your_subject">do seu assunto</string>
+    <string name="l_notification_of_your_comment">do seu comentário</string>
+    <string name="l_notification_of_your_answer">da sua resposta</string>
     
 </resources>
