--- a/Android/Legion/res/values/strings.xml
+++ b/Android/Legion/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Legion</string>
+    <string name="app_name">Legião</string>
     <string name="title_color">#808080</string>
     
     <string name="f_yes">Sim</string>
